infrastructure/argocd/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      hostname: argocd.decort.tech
      port: 7443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
      sectionName: https
  hostnames:
    - "argocd.decort.tech"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
